// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer initial state 1`] = `
Object {
  "deleteWalletModalVisible": false,
  "getSeedWalletModalVisible": false,
  "privateSeedUnlocked": false,
  "renameWalletInput": "",
  "renameWalletModalVisible": false,
  "resyncWalletModalVisible": false,
  "splitWalletModalVisible": false,
  "viewXPubWalletModalVisible": false,
  "walletArchivesVisible": false,
  "walletId": "",
  "walletName": "",
  "xPubSyntax": "",
}
`;

exports[`reducer open delete wallet modal 1`] = `
Object {
  "deleteWalletModalVisible": true,
  "getSeedWalletModalVisible": false,
  "privateSeedUnlocked": false,
  "renameWalletInput": "",
  "renameWalletModalVisible": false,
  "resyncWalletModalVisible": false,
  "splitWalletModalVisible": false,
  "viewXPubWalletModalVisible": false,
  "walletArchivesVisible": false,
  "walletId": "DELETE WALLET ID",
  "walletName": "",
  "xPubSyntax": "",
}
`;

exports[`reducer open getseed wallet modal 1`] = `
Object {
  "deleteWalletModalVisible": false,
  "getSeedWalletModalVisible": true,
  "privateSeedUnlocked": false,
  "renameWalletInput": "",
  "renameWalletModalVisible": false,
  "resyncWalletModalVisible": false,
  "splitWalletModalVisible": false,
  "viewXPubWalletModalVisible": false,
  "walletArchivesVisible": false,
  "walletId": "GETSEED WALLET ID",
  "walletName": "",
  "xPubSyntax": "",
}
`;

exports[`reducer open rename wallet modal 1`] = `
Object {
  "deleteWalletModalVisible": false,
  "getSeedWalletModalVisible": false,
  "privateSeedUnlocked": false,
  "renameWalletInput": "",
  "renameWalletModalVisible": true,
  "resyncWalletModalVisible": false,
  "splitWalletModalVisible": false,
  "viewXPubWalletModalVisible": false,
  "walletArchivesVisible": false,
  "walletId": "RENAME WALLET ID",
  "walletName": "THIS IS THE WALLET NAME",
  "xPubSyntax": "",
}
`;

exports[`reducer open resync wallet modal 1`] = `
Object {
  "deleteWalletModalVisible": false,
  "getSeedWalletModalVisible": false,
  "privateSeedUnlocked": false,
  "renameWalletInput": "",
  "renameWalletModalVisible": false,
  "resyncWalletModalVisible": true,
  "splitWalletModalVisible": false,
  "viewXPubWalletModalVisible": false,
  "walletArchivesVisible": false,
  "walletId": "RESYNC WALLET ID",
  "walletName": "",
  "xPubSyntax": "",
}
`;

exports[`reducer open viewxpub wallet modal 1`] = `
Object {
  "deleteWalletModalVisible": false,
  "getSeedWalletModalVisible": false,
  "privateSeedUnlocked": false,
  "renameWalletInput": "",
  "renameWalletModalVisible": false,
  "resyncWalletModalVisible": false,
  "splitWalletModalVisible": false,
  "viewXPubWalletModalVisible": true,
  "walletArchivesVisible": false,
  "walletId": "VIEWXPUB WALLET ID",
  "walletName": "",
  "xPubSyntax": "VIEWXPUB xpub1892736451987263r",
}
`;
